Bug 227380 - bad color contrast for links in error messages r=simon, a=sgreen

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -383,6 +383,10 @@ input.requestee {
     padding: 0.5em 1em;
 }
 
+.throw_error a:visited {
+    color: darkblue ;
+}
+
 dt {
     font-weight: bold;
 }
